kubernetes/management/etcd-backup/manifests/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: etcd-backup
  labels:
    backups.kalexlab.xyz/provision: "true"
    backups.kalexlab.xyz/use: "true"
